# yt-python-api

./: Dockerfile  README.md  pyproject.toml
deploy/: deployment.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml  values.yaml
src/blazing/: db.py  main.py
src/blazing/models/: pokemon.py
src/blazing/routes/: pokemon.py
