[project]
name = "blazing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tim van Cann", email = "timvancann@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.22",
]

[project.scripts]
blazing = "blazing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]
